# evader

./: README.md  pyproject.toml
.reuse/: dep5
doc/source/: conf.py  index.rst
evader/: __init__.py  __main__.py  baseobjects.py  common.py  controller.py  demo.py  math.py  model.py  objects.py
evader/examples/: __init__.py  default.py  maxmindist.py  maxnextdist.py  minfuel.py  noevasion.py  optimal.py
