# SPDX-FileCopyrightText: 2021 Kirill Pushkaryov <kpushkaryov@gmail.com>
#
# SPDX-License-Identifier: MIT
[tool.poetry]
name = "evader"
version = "0.0.0"
description = "Educational demonstration of a simple model of an aircraft evading unguided missiles optimally"
authors = ["Kirill Pushkaryov <kpushkaryov@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/kpushkaryov/evader"
keywords = [ "optimization", "modeling" ]
classifiers = [
    "Development Status :: 1 - Planning",
    "Framework :: Matplotlib",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Topic :: Scientific/Engineering :: Mathematics"
]

include = [
    { path = "doc", format = "sdist" },
    { path = "LICENSES/*.txt", format = "sdist"},
    { path = ".reuse/dep5", format = "sdist"}
]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.17.4"
scipy = "^1.3.3"
matplotlib = "^3.1.2"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
flake8-docstrings = "^1.6.0"
pydocstyle = "^6.0.0"
naming = "^0.11.1"
pycodestyle = "^2.6.0"
pyflakes = "^2.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
